--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,390 @@
-/* место для вашего кода */
+.header {
+	margin: 92px 50px;
+	display: flex;
+	min-width: 1340px;
+	justify-content: space-between;
+	min-height: 109px;
+}
+
+.header__menu {
+	display: flex;
+	align-items: center;
+}
+
+.header__links-list {
+	display: flex;
+	flex-direction: row;
+	list-style: circle;
+	gap: 32px;
+}
+
+.header__links-list-item{
+	text-transform: lowercase;
+}
+
+.header__links-list-item_no-bullit {
+	list-style-type: none;
+}
+
+.header__link_active {
+	text-decoration: none;
+}
+
+.header__link {
+	color: #000;
+	font-family: Raleway;
+	font-size: 18px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+}
+
+.header__logo {
+	position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.address {
+	color: #000;
+	font-family: Raleway;
+	font-size: 18px;
+	font-style: normal;
+	font-weight: 400;
+	max-width: 240px;
+}
+
+.header__address {
+	display: flex;
+	flex-direction: column;
+	align-self: center;
+	flex-wrap: wrap;
+	line-height: 135%;
+}
+
+.cover {
+	background-image: url("../images/background_flowers.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	max-height: 757px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+	position: relative;
+	gap: 135px;
+}
+
+.overlay {
+  width: 100%;
+  height: 100%;
+	position: absolute;
+  background-color: rgb(0 0 0 / 0.6);
+}
+
+.cover__title {
+	color: #FFF;
+	font-family: Raleway;
+	font-size: 100px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: 100%;
+	letter-spacing: 30px;
+	text-transform: uppercase;
+	min-width: 1340px;
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	z-index: 1;
+	margin-top: 165px;
+}
+
+.aligned-text {
+	display: block;
+	line-height: 115%;
+}
+
+.aligned-text_center {
+	display: block;
+	max-width: 1280px;
+}
+
+.aligned-text_right {
+	display: block;
+}
+
+.aligned-text .letter-spacing-extended {
+	letter-spacing: 60px;
+}
+
+.aligned-text .no-letter-spacing {
+	letter-spacing: 0px;
+}
+.aligned-text_center {
+	line-height: 100%;
+	text-align: center;
+}
+
+.aligned-text_center .letter-spacing-extended {
+	letter-spacing: 60px;
+}
+
+.aligned-text_center .no-letter-spacing {
+	letter-spacing: 0px;
+}
+.aligned-text_right {
+	text-align: right;
+	letter-spacing: 60px;
+}
+
+.aligned-text_right .letter-spacing-extended {
+	letter-spacing: 30px;
+}
+
+.aligned-text_right .no-letter-spacing {
+	letter-spacing: 0px;
+}
+
+.cover__description {
+	display: flex;
+	align-items: center;
+	align-self: flex-end;
+	gap: 78px;
+	z-index: 1;
+	margin-bottom: 62px;
+}
+
+.cover__description-text {
+	color: #FFF;
+	font-family: Raleway;
+	text-align: center;
+	font-size: 22px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: 28px;
+	text-transform: uppercase;
+	word-spacing: 18px;
+}
+
+.bet-button {
+	color: #FFF;
+	text-align: center;
+	font-family: Raleway;
+	font-size: 22px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+	text-transform: uppercase;
+	border: 1px solid #FFF;
+	padding: 12px 32px;
+	background-color: transparent;
+	margin-right: 50px;
+}
+
+.lots {
+	min-width: 1340px;
+	display: flex;
+	flex-direction: column;
+	margin: 180px 50px;
+}
+
+.lots__heading {
+	color: #000;
+	font-family: Raleway;
+	font-size: 40px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: normal;
+	text-transform: uppercase;
+	align-self: flex-start;
+	margin-left: 40px;
+}
+
+.lots__card-list {
+	list-style-type: none;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	gap: 25px;
+	margin-top: 27px;
+	flex-wrap: wrap;
+	flex-grow: 1
+}
+
+.lots__card-list-item {
+	display: flex;
+	max-width: 430px;
+	min-height: 450px;
+}
+
+.card-link {
+	text-decoration: none;
+	display: block;
+	height: 100%;
+}
+
+.card_type_film {
+	background-image: url(../images/lot_1.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+}
+
+.card_type_book {
+	background-image: url(../images/lot_2.png);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+}
+
+.card_type_picture {
+	background-image: url(../images/lot_3.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+}
+
+.card {
+	height: 100%;
+	min-height: 450px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	position: relative;
+}
+
+
+.card__title {
+	color: #FFF;
+	font-family: Raleway;
+	font-size: 22px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: 120%; /* 26.4px */
+	text-decoration-line: underline;
+	text-transform: uppercase;
+	margin: 50px 40px 0 40px;
+	z-index: 1;
+
+}
+
+.card__text {
+	color: #FFF;
+	font-family: Raleway;
+	font-size: 20px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: 120%;
+	margin: 0 40px 50px 40px;
+	z-index: 1;
+}
+
+.lots__look-more-link {
+	display: block;
+	color: #000;
+	font-family: Raleway;
+	font-size: 20px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+	text-transform: lowercase;
+	align-self: flex-start;
+	margin-top: 30px;
+	margin-left: 40px;
+}
+
+.about {
+	display: flex;
+	justify-content: space-between;
+	align-items: start;
+	margin-left: 145px;
+	margin-right: 50px;
+}
+
+.about__column {
+	display: flex;
+	flex-direction: column;
+	max-width: 885px;
+	gap: 100px;
+}
+
+.about__logo {
+	display: flex;
+	background-color: #000;
+	width: 240px;
+	height: 240px;
+	border-radius: 50%;
+	justify-content: center;
+	align-items: center;
+}
+
+.about__logo-image {
+	z-index: 1;
+}
+
+.about__title {
+	color: #000;
+	font-family: Raleway;
+	font-size: 40px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: normal;
+	text-transform: uppercase;
+	align-self: flex-start;
+	margin-top: 100px;
+}
+
+.about__text_column {
+	display: flex;
+	flex-direction: column;
+	gap: 25px;
+}
+
+.about__text {
+	color: #000;
+	font-family: Raleway;
+	font-size: 20px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+}
+
+.footer {
+	margin-top: 180px;
+	display: flex;
+	justify-content: space-between;
+	 margin: 180px 50px 0px 50px; /* не знаю, нужно было делать нижний отсуп 0 или 90 px */
+}
+
+.footer__menu-link {
+	color: #000;
+	text-align: center;
+	font-family: Raleway;
+	font-size: 18px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+	list-style-type: none;
+}
+
+.footer__menu-link_active {
+	text-decoration: none;
+}
+
+.footer__menu-list {
+	list-style-type: none;
+	display: flex;
+	flex-direction: column;
+  align-items: center;
+}
+
+.footer__social-list {
+	list-style-type: none;
+	display: flex;
+	gap: 48px;
+}
+
+.footer__social-icon {
+	max-height: 48px;
+}
